Updated OpenSwagger Implemented flow for gettin Instance by ID
