# app.py
@@ -1,3 +1,4 @@
+import json
 from flask import Flask, jsonify
 from flask import request
 from server.api import API
@@ -36,12 +37,57 @@ def get_instances(patient_id):
 
     return jsonify(json_response)
 # Get the full treatment
-@app.route("/v1/instance", methods=['GET'])
+
+
+@app.route("/v1/instance/", methods=['GET'])
 def get_instance():
-    instance_id = request.args.get('instance_id')
-    return "Hello, World!"
+    instance_id = request.args.get('id')
+    response = api.get_instance(request.headers, instance_id)
+    
+    # Assuming response is a Treatment object
+    treatment = response
 
+    # Convert Treatment object to a dictionary
+    treatment_dict = {
+        "treatment_id": treatment.treatment_id,
+        "doctor_id": treatment.doctor_id,
+        "patient_id": treatment.patient_id,
+        "status": treatment.status,
+        "pattern_instance": {
+            "instance_id": treatment.pattern_instance.instance_id,
+            "status": treatment.pattern_instance.status,
+            "pattern_id": treatment.pattern_instance.pattern_id,
+            "author_id": treatment.pattern_instance.author_id,
+            "pattern_name": treatment.pattern_instance.pattern_name,
+            "created_at": treatment.pattern_instance.created_at,
+            "updated_at": treatment.pattern_instance.updated_at,
+            "deleted_at": treatment.pattern_instance.deleted_at,
+            "tasks": [
+                {
+                    "id": task.id,
+                    "level": task.level,
+                    "name": task.name,
+                    "status": task.status,
+                    "blocked_by": task.blocked_by,
+                    "responsible": task.responsible,
+                    "time_limit": task.time_limit,
+                    "children": [child.id for child in task.children],
+                    "comment": task.comment
+                }
+                for task in treatment.pattern_instance.tasks
+            ]
+        },
+        "started_at": treatment.started_at,
+        "finished_at": treatment.finished_at,
+        "deleted_at": treatment.deleted_at
+    }
 
+    print(treatment)
+
+    # Convert dictionary to JSON string
+    json_response = json.dumps(treatment_dict)
+
+    return json_response
 
 
 
