# docs/swagger.yaml
@@ -79,10 +79,15 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Treatment'
-  '/v1/instances/id={id}':
+                type: object
+                properties: 
+                  patient_id:
+                    type: string
+                  treatments:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/TreatmentLight'
+  '/v1/instance/id={id}':
     get:
       tags:
         - instances
@@ -104,7 +109,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: '#/components/schemas/Treatment'
+                    $ref: '#/components/schemas/Treatment'
   # '/v1/instances/status/id={id}':
   #   get:
   #     tags:
@@ -330,8 +335,7 @@ components:
             type: integer
             format: int64
         responsible:
-          type: integer
-          format: int64
+          type: string
         time_limit:
           type: integer
           format: int64
@@ -345,10 +349,9 @@ components:
       type: object
       properties:
         schema_id:
-          type: integer
+          type: string
         author_id:
           type: integer
-          format: int64
         schema_name:
           type: string
         created_at:
@@ -371,6 +374,39 @@ components:
           type: string
         schema_reference:
           $ref: '#/components/schemas/Schema'
+    PatternInstance:
+      type: object
+      properties:
+        instance_id:
+          type: string
+        status:
+          type: string
+          enum: 
+            - PATTERN_INSTANCE_STATUS_UNSPECIFIED
+            - PATTERN_INSTANCE_STATUS_NOT_STARTED
+            - PATTERN_INSTANCE_STATUS_RUNNING
+            - PATTERN_INSTANCE_STATUS_BLOCKED
+            - PATTERN_INSTANCE_STATUS_COMPLETED
+            - PATTERN_INSTANCE_STATUS_CANCELLED
+        pattern_id:
+          type: string
+        author_id:
+          type: string
+        pattern_name:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+        deleted_at:
+          type: string
+          format: date-time
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/Task'
     TreatmentStatus:
       type: string
       enum:
@@ -385,24 +421,35 @@ components:
         treatment_id:
           type: string
         doctor_id:
-          type: integer
-          format: int64
+          type: string
         patient_id:
           type: integer
           format: int64
         status:
           $ref: '#/components/schemas/TreatmentStatus'
-        schema_instace_id:
-          type: string
+        pattern_instance:
+          $ref: '#/components/schemas/PatternInstance'
         started_at:
           type: string 
           format: date-time
-        updated_at:
+        finished_at:
           type: string 
           format: date-time
         deleted_at:
           type: string 
           format: date-time
+    TreatmentLight:
+      type: object
+      properties:
+        treatment_id:
+          type: string
+        treatment_name:
+          type: string
+        status:
+          $ref: '#/components/schemas/TreatmentStatus'
+        treatment_progress:
+          type: number
+        
         
             
 servers:
